Update the user guide entries for the content view

--- a/Documentation/Content.html
+++ b/Documentation/Content.html
@@ -13,7 +13,7 @@
         <ol>
             <li>Scroll to see the desired content card under the corresponding client heading</li>
             <li>Click on the desired content card to open the content</li>
-            <li>Note that content to be downloaded will have a slide up section on the bottom of the card with a download icon</li>
+            <li>Note that content to be downloaded will be indicated by a button at the bottom of the card that says <strong>Download</strong></li>
         </ol>
     </div>
 	<button class="accordion">Closing Content</button>
@@ -22,25 +22,24 @@
         <p>or</p>
         <p>Use the Navigation Bar on the left side to choose a new page</p>
     </div>
-    <button class="accordion">Accessing a Content Related File (e.g. User Guide) from the Content Card</button>
+    <button class="accordion">Accessing the User Guide or Release Notes for content</button>
     <div class="content">
         <ol>
-            <li>Hover over the desired icon in upper right corner of the content card</li>
-            <li>Click on the icon to view the linked item</li>
-            <li>Note that if a content item does not have a particular related file, no icon will appear</li>
+            <li>Click on the button at the bottom of the desired content to view the documentation associated with that piece of content</li>
+            <li>Note that User Guide and Release Notes buttons will only appear if they are available for that content</li>
         </ol>
     </div>
     <button class="accordion">Opening Content in a New Browser Tab</button>
     <div class="content">
         <ol>
-            <li>Hover over the content card or the related file icons in upper right corner of the card</li>
-            <li>Click the middle mouse button (scroll wheel), or right click and select <strong>Open Link in New Tab</strong> from the popup menu</li>
+            <li>To open the main content, click on the button at the bottom of the content card that says <strong>Open in New Tab</strong></li>
+            <li>To open associated content, click the middle mouse button (scroll wheel), or right click and select <strong>Open Link in New Tab</strong> from the popup menu, while hovering over the User Guide or Release Notes buttons at the bottom of the card</li>
         </ol>
     </div>
     <button class="accordion">Searching for Content</button>
     <div class="content">
         <ol>
-            <li>Click on the <strong>Filter content</strong> search bar at the upper right of the page</li>
+            <li>Click on the search bar at the upper right of the page that says <strong>Filter content</strong></li>
             <li>Begin typing to search for content item(s) with matching name</li>
         </ol>
     </div>
