Update the userguides to reflect the change to delete procedures

--- a/Documentation/ClientAdmin.html
+++ b/Documentation/ClientAdmin.html
@@ -38,7 +38,7 @@
         <ol>
             <li>Click on the red trash icon on the card of the Client to delete</li>
             <li>Click <strong>Delete</strong> in the popup message</li>
-            <li>Enter your password to confirm deletion and click <strong>Delete</strong></li>
+            <li>Enter the word "DELETE" and press the <strong>Delete</strong> button to confirm deletion</li>
         </ol>
     </div>
 
