--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -54,7 +54,7 @@
             <li>Navigate to the Client, then the Content Item to be deleted</li>
             <li>Click on the red trash icon</li>
             <li>Press <strong>Delete</strong></li>
-            <li>Enter password to confirm deletion and press <strong>Delete</strong></li>
+            <li>Enter the word "DELETE" and press the <strong>Delete</strong> button to confirm deletion</li>
         </ol>
     </div>
     <script src="_JS\accordion.js"></script>
