--- a/Documentation/AccountSettings.html
+++ b/Documentation/AccountSettings.html
@@ -23,7 +23,7 @@
             <li>Click <strong>Update Account</strong> at the bottom of the form to complete the update</li>
             <li>The new password will be checked for MAP password requirements</li>
         </ol>
-        <p>If you have single sign on enabled, you will not be able to update your password information.</p>
+        <p>If you sign in to Milliman Access Portal using credentials controlled by your organization, please contact your local IT department for help updating your password.</p>
     </div>
     <script src="_JS\accordion.js"></script>
 </body>
