--- a/Documentation/ClientAdmin.html
+++ b/Documentation/ClientAdmin.html
@@ -33,6 +33,12 @@
             <li>Note that the username/email of a user of this client must match the </strong>Approved Email Domain List</strong> or </strong>Approved Email Address Exception List</strong></li>
             <li>Click <strong>Save Changes</strong> to update the client information</li>
         </ol>
+        <h3>Requesting a Domain Limit Increase</h3>
+        <ol>
+            <li>Send an email to MAP.Support@milliman.com</li>
+            <li>In the email, include the name of the Client, the new domain limit, and a detailed reason for the necessity of the increase</li>
+            <li>Once the request has been processed, you will be able to add new domains to the Approved Email Domain Limit up to the new limit</li>
+        </ol>
 
         <h3>Deleting a Client</h3>
         <ol>
