Add user guide entry for increasing domain limit in system admin

--- a/Documentation/SystemAdmin.html
+++ b/Documentation/SystemAdmin.html
@@ -63,6 +63,15 @@
             <li>Choose a content item</li>
             <li>Click on the <strong>Suspended</strong> toggle on the far right under <strong>Content Item Details</strong></li>
         </ol>
+
+        <h3>Increasing the Client Domain Limit</h3>
+        <ol>
+            <li>Click on the <strong>Clients</strong> tab in the left column</li>
+            <li>Click a Client card to be managed</li>
+            <li>Click on the <strong>Increase Domain Limit</strong> button under the Client Information on the right</li>
+            <li>Fill in the new domain limit, the email of the user that requested the increase, and the reason for the increase</li>
+            <li>Once the form has been completed, click the <strong>UPDATE DOMAIN LIMITS</strong> button</li>
+        </ol>
     </div>
 
     <button class="accordion">Managing Profit Centers</button>
