Make the h3 rules work better

--- a/Documentation/ClientAdmin.html
+++ b/Documentation/ClientAdmin.html
@@ -10,7 +10,7 @@
     <h1>Client Administration</h1>
     <button class="accordion">Managing Clients</button>
     <div class="content">
-        <h3>Creating a New Client</h3>
+        <h3 class="subheading">Creating a New Client</h3>
         <ol>
             <li>Click the <strong>New Client</strong> card at the left, or the <strong>+</strong> icon to the right of the Filter Clients box</li>
             <li>Fill in the Client information form</li>
@@ -20,12 +20,12 @@
             <li>Click the <strong>Create Client</strong> button to save the new Client with the entered information</li>
         </ol>
 
-        <h3>Creating a Sub-Client</h3>
+        <h3 class="subheading">Creating a Sub-Client</h3>
         <ol>
             <li>Click the green plus sign on the Client card that you want to create a Sub-Client for</li>
             <li>Fill in the form, following the same steps as above for creating a new Client</li>
         </ol>
-        <h3>Editing Client Information</h3>
+        <h3 class="subheading">Editing Client Information</h3>
         <ol>
             <li>Identify the Client card to be managed in the left column</li>
             <li>Click on the blue pencil on the Client card, or on the pencil in the upper right of the form</li>
@@ -33,14 +33,14 @@
             <li>Note that the username/email of a user of this client must match the </strong>Approved Email Domain List</strong> or </strong>Approved Email Address Exception List</strong></li>
             <li>Click <strong>Save Changes</strong> to update the client information</li>
         </ol>
-        <h3>Requesting a Domain Limit Increase</h3>
+        <h3 class="subheading">Requesting a Domain Limit Increase</h3>
         <ol>
             <li>Send an email to MAP.Support@milliman.com</li>
             <li>In the email, include the name of the Client, the new domain limit, and a detailed reason for the necessity of the increase</li>
             <li>Once the request has been processed, you will be able to add new domains to the Approved Email Domain Limit up to the new limit</li>
         </ol>
 
-        <h3>Deleting a Client</h3>
+        <h3 class="subheading">Deleting a Client</h3>
         <ol>
             <li>Click on the red trash icon on the card of the Client to delete</li>
             <li>Click <strong>Delete</strong> in the popup message</li>
@@ -50,7 +50,7 @@
 
     <button class="accordion">Managing Users in the Client</button>
     <div class="content">
-        <h3>Adding Users to a Client</h3>
+        <h3 class="subheading">Adding Users to a Client</h3>
         <ol>
             <li>Click on the Client card to be managed</li>
             <li>Click the <strong>Add User</strong> card or the <strong>+</strong> icon near the top of the right column</li>
@@ -59,7 +59,7 @@
             <li>Note that if the added user is new to MAP the user will immediately be sent a welcome email with a link to enable their account</li>
         </ol>
 
-        <h3>Adjusting User Roles for the Client</h3>
+        <h3 class="subheading">Adjusting User Roles for the Client</h3>
         <ol>
             <li>Click on a Client card to select the client to be managed. User cards for that Client will be displayed at the right</li>
             <li>Click on the down blue arrow on the user’s card to view the assigned roles</li>
@@ -67,7 +67,7 @@
             <li>Note that a user&apos;s Admin role cannot be removed if they are the only admin for the Client</li>
         </ol>
 
-        <h3>Removing a User</h3>
+        <h3 class="subheading">Removing a User</h3>
         <ol>
             <li>Click on a Client card to select the client to be managed</li>
             <li>Click on the red minus icon on the card of the user to be removed</li>
