--- a/Documentation/SystemAdmin.html
+++ b/Documentation/SystemAdmin.html
@@ -11,7 +11,7 @@
     <button class="accordion">Managing Users</button>
     <div class="content">
 
-        <h3>Creating a New User</h3>
+        <h3 class="subheading">Creating a New User</h3>
         <ol>
             <li>Click on the <strong>Users</strong> tab in the left column</li>
             <li>Click the plus sign near the search bar</li>
@@ -19,14 +19,14 @@
             <li>Click <strong>Create User</strong></li>
         </ol>
 
-        <h3>Managing User Roles</h3>
+        <h3 class="subheading">Managing User Roles</h3>
         <ol>
             <li>Click on the <strong>Users</strong> tab in the left column</li>
             <li>Click a user card to manage</li>
             <li>Toggle System Permissions and User Settings in the far right section</li>
         </ol>
 
-        <h3>Managing User Roles at Client Level</h3>
+        <h3 class="subheading">Managing User Roles at Client Level</h3>
         <ol>
             <li>Click on the <strong>Users</strong> tab in the left column</li>
             <li>Click a user card to manage</li>
@@ -35,7 +35,7 @@
             <li>Toggle individual <strong>Client/User Roles</strong> settings in far right section</li>
         </ol>
 
-        <h3>Suspending Users</h3>
+        <h3 class="subheading">Suspending Users</h3>
         <ol>
             <li>Click on the <strong>Users</strong> tab in the left column</li>
             <li>Click the user card to be suspended</li>
@@ -45,7 +45,7 @@
 
     <button class="accordion">Managing Clients</button>
     <div class="content">
-        <h3>Adding A User to a specific Client</h3>
+        <h3 class="subheading">Adding A User to a specific Client</h3>
         <ol>
             <li>Click on the <strong>Clients</strong> tab in the left column</li>
             <li>Click a Client card to be managed</li>
@@ -55,7 +55,7 @@
             <li>Click <strong>Add User</strong>"</li>
         </ol>
 
-        <h3>Suspending Content</h3>
+        <h3 class="subheading">Suspending Content</h3>
         <ol>
             <li>Click on the <strong>Clients</strong> tab in the left column</li>
             <li>Click a Client card to be managed</li>
@@ -64,7 +64,7 @@
             <li>Click on the <strong>Suspended</strong> toggle on the far right under <strong>Content Item Details</strong></li>
         </ol>
 
-        <h3>Increasing the Client Domain Limit</h3>
+        <h3 class="subheading">Increasing the Client Domain Limit</h3>
         <ol>
             <li>Click on the <strong>Clients</strong> tab in the left column</li>
             <li>Click a Client card to be managed</li>
@@ -76,7 +76,7 @@
 
     <button class="accordion">Managing Profit Centers</button>
     <div class="content">
-        <h3>Creating a Profit Center</h3>
+        <h3 class="subheading">Creating a Profit Center</h3>
         <ol>
             <li>Click on the <strong>Profit Center</strong> tab in the left column</li>
             <li>Click on the plus sign next to the searh bar for Profit Center</li>
@@ -84,7 +84,7 @@
             <li>Click on <strong>Create Profit Center</strong></li>
         </ol>
 
-        <h3>Adding Authorized Users to a Profit Center</h3>
+        <h3 class="subheading">Adding Authorized Users to a Profit Center</h3>
         <ol>
             <li>Click on the <strong>Profit Center</strong> tab in the left column</li>
             <li>Click to select a Profit Center to add an authorized user to</li>
@@ -94,7 +94,7 @@
             <li>Click on <strong>Add User</strong></li>
         </ol>
 
-        <h3>Viewing Clients in a Profit Center</h3>
+        <h3 class="subheading">Viewing Clients in a Profit Center</h3>
         <ol>
             <li>Click on the <strong>Profit Center</strong> tab in the left column</li>
             <li>Choose a Profit Center to view Client information</li>
