--- a/Documentation/ContentAccessAdmin.html
+++ b/Documentation/ContentAccessAdmin.html
@@ -20,7 +20,7 @@
     </div>
     <button class="accordion">Managing Users in Selection Groups</button>
     <div class="content">
-        <h3>Adding Users in Selection Groups</h3>
+        <h3 class="subheading">Adding Users in Selection Groups</h3>
         <ol>
             <li>While in edit mode on the expanded card, type in the user’s email address and press the green plus sign
 			    <ul>
@@ -31,13 +31,13 @@
             <li>When finished adding users, press the green checkmark on the card to save changes</li>
         </ol>
 
-        <h3>Removing Users in Selection Groups</h3>
+        <h3 class="subheading">Removing Users in Selection Groups</h3>
         <ol>
             <li>While in edit mode on the expanded card, press the red minus sign next to the users name to remove</li>
             <li>When finished removing users, press the green checkmark on the card to save changes</li>
         </ol>
 
-        <h3>Editing Users in Selection Groups</h3>
+        <h3 class="subheading">Editing Users in Selection Groups</h3>
         <ol>
             <li>Navigate to the Selection Group</li>
             <li>Click the blue down arrow on the selection group card to view users</li>
