--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -28,7 +28,7 @@
         </ol>
         <li>Processing of publications is performed in the order requested; depending on the size and complexity of the publication, this may take some time</li>
         <li>The status of the request will be displayed below the content item card on this page</li>
-        <h3>Approving a New Content Item for Go-Live</h3>
+        <h3 class="subheading">Approving a New Content Item for Go-Live</h3>
         <ol>
             <li>After the Content Item has reached the <strong>Processed</strong> status, click the green checkmark on the Content Item card to review the processed publication</li>
             <li>Review and check off each section (if it is correct), and consider the attestation statement. Note that for the FileDownload content type, you can download the file to review it</li>
