Update the content access admin user guide
Update an outdated item and remove some unecessary/redundant information.

--- a/Documentation/ContentAccessAdmin.html
+++ b/Documentation/ContentAccessAdmin.html
@@ -22,7 +22,7 @@
     <div class="content">
         <h3 class="subheading">Adding Users in Selection Groups</h3>
         <ol>
-            <li>While in edit mode on the expanded card, type in the user’s email address and press the green plus sign
+            <li>While in edit mode on the expanded card, type in the user’s email address and press the enter or tab buttons to add the user
 			    <ul>
 				    <li>Only users that have been approved by a Client Administrator can be granted access to content</li>
 					<li>A user can only exist in one Selection Group per Content item</li>
@@ -35,13 +35,6 @@
         <ol>
             <li>While in edit mode on the expanded card, press the red minus sign next to the users name to remove</li>
             <li>When finished removing users, press the green checkmark on the card to save changes</li>
-        </ol>
-
-        <h3 class="subheading">Editing Users in Selection Groups</h3>
-        <ol>
-            <li>Navigate to the Selection Group</li>
-            <li>Click the blue down arrow on the selection group card to view users</li>
-            <li>Click the blue pencil to edit the group name/users information</li>
         </ol>
     </div>
     <button class="accordion">Managing Access to Content</button>
