--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -80,6 +80,11 @@
       <p><strong>SFTP Connection:</strong></p>
       <p><strong>SFTP Credentials:</strong></p>
       <p><strong>Notification Settings:</strong></p>
+  <header>
+    <img src="../MillimanAccessPortal/MillimanAccessPortal/src/images/map-logo-white.svg" >
+  </header>
+  <div class="body-content">
+      </div>
     </div>
     <script src="_JS\accordion.js"></script>
 </body>
