--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <title>File Drop - User Guide</title>
     <link rel="stylesheet" href="_CSS\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>File Drop</h1>
